# fuzzy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  build.bat  build.gradle  clean.bat  fuzzy.sln  fuzzy_build.bat  game_build.bat  glad_generate.bat  glfw_build.bat  settings.gradle  update_git_submodules.bat
data/: animations.json
data/levels/: level01.json  tileset.json
data/maps/: map01.json
data/shaders/: basic.frag  basic.vert  border.frag  border.vert  box.frag  box.vert  box_instanced.frag  color.frag  entity.frag  entity.vert  particle.vert  particle_instanced.frag  rectangle_outline.frag  sprite.frag  sprite.vert  test.txt  text.frag  text.vert  tile.vert
data/textures/: sprites.json
data/tilesets/: tileset.json
game/: CMakeLists.txt  build.gradle  game.vcxproj  main.cpp
game/assets/models/stall/: stall.mtl
game/assets/shaders/: shader.frag  shader.vert
game/assets/shaders/fragment/: fragment.frag  lighting.frag
game/assets/shaders/lighting/: lighting.frag
game/assets/shaders/models/box/: box.frag
game/assets/shaders/models/bunny/: model.frag  model.vert
game/assets/shaders/models/dragon/: model.frag  model.vert
game/assets/shaders/models/nanosuit/: model.frag
game/assets/shaders/vertex/: lighting.vert  vertex.vert
game/resources/shaders/basic/: shader.frag  shader.vert
game/shaders/fragment/: fragment.frag
game/shaders/vertex/: vertex.vert
game/src/: main.cpp
game/src/main/java/com/wiranoid/fuzzy/game/: FuzzyGame.java  HelloFuzzy.java
gradle/wrapper/: gradle-wrapper.properties
graphics/: graphics.vcxproj
misc/: game_build.bat  glad_generate.bat  glfw_build.bat
modules/graphics/: CMakeLists.txt  build.gradle
modules/graphics/include/: Camera.h  Texture.h  Window.h  WindowManager.h
modules/graphics/include/g3d/: Mesh.h  Model.h
modules/graphics/include/glutils/: Shader.h  ShaderProgram.h  TextureData.h  VertexData.h
modules/graphics/src/: Camera.cpp  Texture.cpp  Window.cpp  WindowManager.cpp
modules/graphics/src/g3d/: Mesh.cpp  Model.cpp
modules/graphics/src/glutils/: Shader.cpp  ShaderProgram.cpp
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/: Camera.java  FuzzyGame.java  Mesh.java  Texture.java  Window.java
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/g2d/: Texture.java
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/g3d/loaders/: ObjLoader.java
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/glutils/: Shader.java  ShaderProgram.java  Vertex.java  VertexAttribute.java
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/shaders/: Shader.java  ShaderProgram.java
modules/graphics/src/main/java/com/wiranoid/fuzzy/graphics/textures/: Texture.java
modules/graphics/src/test/java/com/wiranoid/fuzzy/graphics/glutils/: ShaderProgramTest.java  VertexAttributeTest.java  VertexTest.java
src/: fuzzy.cpp  fuzzy.h  fuzzy.vcxproj  fuzzy.vcxproj.filters  test.cpp  tiled.cpp  types.h
src/assets_builder/: assets.h  assets_builder.cpp  assets_builder.vcxproj  assets_builder.vcxproj.filters
src/fuzzy/: fuzzy.cpp  fuzzy.h  fuzzy.vcxproj  fuzzy.vcxproj.filters  fuzzy_animations.cpp  fuzzy_animations.h  fuzzy_assets.cpp  fuzzy_containers.cpp  fuzzy_containers.h  fuzzy_graphics.cpp  fuzzy_graphics.h  fuzzy_math.cpp  fuzzy_math.h  fuzzy_memory.h  fuzzy_platform.h  fuzzy_random.cpp  fuzzy_random.h  fuzzy_renderer.cpp  fuzzy_renderer.h  fuzzy_text.cpp  fuzzy_tiled.cpp  fuzzy_tiled.h  fuzzy_types.h  memory.h  tiled.cpp  types.h
src/game/: game.vcxproj
src/graphics/: Shader.cpp  Shader.h  main.cpp  (+3 more)
(+12 files in other folders)
